# RSUtils

./: README.md  pyproject.toml
src/: rsutils.py
src/rsutils/: __init__.py  rsutils.py
