[project]
name = "rsutils"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "oakwood-fujiken", email = "oakwood.n14.4sp@keio.jp" }
]
dependencies = [
    "numpy==2.0",
    "pyrealsense2>=2.55.1.6486",
    "opencv-python>=4.10.0.84",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rsutils"]
